refining classes, still debugging pitch shifter

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,12 +5,14 @@
     
     <string name="debug_title">DEBUG</string>
     <string name="debug_text">loading</string>
-    <string name="hifreq_text">hpf:</string>
-    <string name="shift_text">shift:</string>
     
     <string name="processing_title">PROCESSING</string>
     <string name="threshold_gate">Threshold gate</string>
-    <string name="pitch_hertz">Pitch in hertz</string>
+    
+    <string name="hifreq_text">hpf:</string>
+    <string name="shift_text">shift:</string>
+    <string name="gain_text">gain:</string>
+   
     
     <string name="visualiser_title">VISUALISER</string>
 </resources>
