--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">CFP Recorder 1.3.0.1</string>
+    <string name="app_name">CFP Recorder 1.3.0.2</string>
     <string name="action_settings">Settings</string>
     
     <string name="debug_text">loading</string>
     
     <string name="processing_title">PROCESSING</string>
     <string name="threshold_gate">SPL dB:</string>
+    <string name="timer_text">timer - 00:00</string>
     
     <string name="hifreq_text">hpf: 18500.0</string>
     <string name="gate_text">gate: N/A</string>
